# Device-Type-Library-Import

./: .env.example  .envrc  .envrc.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_REVIEW_PLAN.md  Dockerfile  Makefile  README.md  change_detector.py  env.example  graphql_client.py  log_handler.py  nb-dt-import.py  netbox_api.py  pyproject.toml  repair_front_ports.py  repo.py  settings.py
.github/: dependabot.yml
.github/workflows/: docker.yml  release.yml  stale.yml  test-netbox-main.yaml  tests.yml
core/: change_detector.py  export.py  formatting.py  graphql_client.py  log_handler.py  netbox_api.py  normalization.py  outcomes.py  repo.py  schema_reader.py  settings.py  update_failure_resolver.py
templates/: .release_notes.md.j2  CHANGELOG.md.j2
templates/.components/: contributors.md.j2
tests/: conftest.py  helpers.py  test_change_detector.py  test_exporter.py  test_formatting.py  test_graphql_client.py  test_log_handler.py  test_nb_dt_import.py  test_netbox_api.py  test_normalization.py  test_repo.py  test_schema_reader.py  test_settings.py  test_update_failure_resolver.py
tests/fixtures/device-types/TestVendor/: full-device.yaml  patch-panel-4-stanza.yaml  patch-panel-4.yaml  server-1u.yaml
tests/fixtures/module-types/TestVendor/: fiber-cassette-4.yaml  full-module.yaml
tests/integration/: conftest.py  test_import.py
