[project]
name = "device-type-library-import"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitpython>=3.1.45",
    "pynetbox>=7.6.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.14.9",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
timeout = 20
timeout_method = "thread"
pythonpath = ["."]
testpaths = [
  "tests"
]
norecursedirs = ["tests/integration"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_message = "chore(release): v{version}"
build_command = ""

[tool.semantic_release.branches.main]
match = "(main|master)"
